--- a/_themes/casperjs/static/casperjs.css
+++ b/_themes/casperjs/static/casperjs.css
@@ -141,9 +141,22 @@ a:hover,
 div.toctree-wrapper a:hover,
 .indextable a:hover,
 #indices-and-tables a:hover {
-    color: #99f;
+    color: #2be;
     text-decoration: none;
 }
+
+/*toctree dedicated styles*/
+.toctree-wrapper li {
+    margin-bottom: .5em;
+}
+    .toctree-wrapper a {
+        padding: .2em .4em;
+        background-color: #555;
+        color:#fff;
+        -webkit-border-radius: 4px;
+        -moz-border-radius: 4px;
+        border-radius: 4px;
+    }
 
 /* Footer links */
 div.footer a {
@@ -152,7 +165,7 @@ div.footer a {
     border: none;
 }
 div.footer a:hover {
-    color: #99f;
+    color: #2be;
     border: none;
 }
 
@@ -184,10 +197,8 @@ div.related ul {
   background-image: linear-gradient(to bottom, #333333, #222222);
   background-repeat: repeat-x;
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff333333', endColorstr='#ff222222', GradientType=0);
-  border: 1px solid #000000;
-  -webkit-border-radius: 4px;
+  border-bottom: 1px solid #111;
   -moz-border-radius: 4px;
-  border-radius: 4px;
   -webkit-box-shadow: 0 1px 4px rgba(0, 0, 0, 0.065);
   -moz-box-shadow: 0 1px 4px rgba(0, 0, 0, 0.065);
   box-shadow: 0 1px 4px rgba(0, 0, 0, 0.065);
@@ -224,7 +235,7 @@ div.related ul li a {
 /* previous / next / modules / index links look more like buttons */
 div.related ul li.right a {
     margin: 0.375em 0;
-    background-color: #697983;
+    background-color: #555;
     text-shadow: 0 1px rgba(0, 0, 0, 0.5);
     border-radius: 3px;
     -webkit-border-radius: 3px;
@@ -232,7 +243,7 @@ div.related ul li.right a {
 }
 /* All navbar links light up as buttons when hovered */
 div.related ul li a:hover {
-    background-color: #555;
+    background-color: #777;
     color: #fff;
     text-decoration: none;
     border-radius: 3px;
@@ -313,7 +324,8 @@ div.sphinxsidebar ul ul {
 /* A little top/bottom padding to prevent adjacent links' borders
  * from overlapping each other */
 div.sphinxsidebar ul li {
-    padding: 1px 0;
+    padding: 0;
+    margin: 2px 0;
 }
 
 /* A little left-padding to make these align with the ULs */
@@ -326,11 +338,15 @@ div.sphinxsidebar ul li,
 div.sphinxsidebar p.topless {
     white-space: nowrap;
     overflow: hidden;
+    border: 1px solid transparent; /* To prevent things jumping around on hover */
 }
 /* ...which become visible when hovered */
 div.sphinxsidebar ul li:hover,
 div.sphinxsidebar p.topless:hover {
+    background-color: #333;
     overflow: visible;
+
+
 }
 
 /* Search text box and "Go" button */
@@ -342,6 +358,7 @@ div.sphinxsidebar p.topless:hover {
     border-radius: 6px;
     -moz-border-radius: 6px;
     -webkit-border-radius: 6px;
+    margin-right: 1em;
 }
 #searchbox h3 {
     margin-top: 0;
@@ -407,6 +424,7 @@ div.sphinxsidebar p a {
 div.sphinxsidebar li a:hover,
 div.sphinxsidebar p a:hover {
     color: #fff;
+    background-color: #333;
 }
 div.sphinxsidebar p.logo a {
     border: 0;
@@ -619,7 +637,13 @@ div.highlight {
     div.highlight pre,
     div.highlight-javascript pre,
     div.highlight-html pre {
-        background: #111;
+        background-color: #4b4b4b;
+        background-color: rgba(75, 75, 75, 0.5);
+        color: #eee;
+        font-size: 15px;
+        line-height: 21px;
+        white-space: pre;
+        overflow: auto;
         border: none;
     }
 
