--- a/_themes/casperjs/static/casperjs.css
+++ b/_themes/casperjs/static/casperjs.css
@@ -27,6 +27,11 @@ body {
     margin: 0;
 }
 
+img {
+    border: 0;
+    max-width: 100%;
+}
+
 .body > .admonition.note {
     margin: 0 0 2em 0;
 }
@@ -36,14 +41,14 @@ body {
 
 div.document {
     text-align: left;
-    background-color: #e8ecef;
+    background-color: #333;
 }
 
 div.bodywrapper {
     background: #111 url(images/bg.png);
     border-left: 1px solid #333;
     border-bottom: 1px solid #333;
-    margin: 0 0 0 16em;
+    margin: 0 18em 0 0;
 }
 
 div.body {
@@ -146,6 +151,11 @@ div.toctree-wrapper a:hover,
 }
 
 /*toctree dedicated styles*/
+.toctree-wrapper ul {
+    list-style-type: none;
+    padding-left: 2em;
+}
+
 .toctree-wrapper ul ul {
     margin-top: .5em;
 }
@@ -182,7 +192,7 @@ div.body a.headerlink {
     border: none;
 }
 div.body a.headerlink:hover {
-    color: #c60f0f;
+    color: #fff;
     border: none;
 }
 
@@ -282,12 +292,12 @@ div.sphinxsidebarwrapper {
 div.sphinxsidebar {
     margin: 0;
     margin-left: -100%;
-    float: left;
+    float: right;
     top: 3em;
     left: 0;
     padding: 0 1em;
-    width: 15em;
-    font-size: 1em;
+    width: 18em;
+    font-size: 90%;
 
 }
 
@@ -361,7 +371,7 @@ div.sphinxsidebar p.topless:hover {
     border-radius: 6px;
     -moz-border-radius: 6px;
     -webkit-border-radius: 6px;
-    margin-right: 1em;
+    margin-right: 0;
 }
 #searchbox h3 {
     margin-top: 0;
@@ -438,9 +448,29 @@ div.sphinxsidebar h3 a {
 }
 
 
-
-
 /* OTHER STUFF ------------------------------------------------------------ */
+
+/* bookmarklet */
+
+.bookmarklet {
+    display: inline-block;
+    padding: 4px 6px;
+    font-size: 13.536px;
+    font-weight: bold;
+    line-height: 14px;
+    color: #ffffff;
+    vertical-align: baseline;
+    white-space: nowrap;
+    text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
+    background-color: #999999;
+    -webkit-border-radius: 3px;
+    -moz-border-radius: 3px;
+    border-radius: 3px;
+    text-align: center;
+}
+    .bookmarklet a {
+        color: #fff;
+    }
 
 cite, code, tt {
     font-family: 'Source Code Pro', 'Consolas', 'Deja Vu Sans Mono',
@@ -659,6 +689,10 @@ div.highlight .c1 {
     color: #999;
 }
 
+div.highlight .cp {
+    color: #3aC;
+}
+
 div.highlight .s1,
 div.highlight .s2 {
     color: orange;
@@ -756,7 +790,7 @@ p {
     }
 
     div.related ul li a {
-        color: #465158;
+        color: #fff;
         padding-right: 0;
     }
 
