--- a/_themes/casperjs/static/casperjs.css
+++ b/_themes/casperjs/static/casperjs.css
@@ -541,7 +541,12 @@ div.quotebar {
 }
 
 div.topic {
-    background-color: #f8f8f8;
+    background-color: #333;
+    border: 0;
+    padding-bottom: .5em;
+    border-radius: 4px;
+    -moz-border-radius: 4px;
+    -webkit-border-radius: 4px;
 }
 
 table {
