--- a/_themes/casperjs/static/casperjs.css
+++ b/_themes/casperjs/static/casperjs.css
@@ -86,6 +86,10 @@ h2 {
     padding: 0;
     color: #fff;
 }
+    .section h2 {
+        border-bottom: 3px solid #777;
+        margin-top: 2.5em
+    }
 
 h3 {
     margin: 1em 0 -0.3em 0;
@@ -210,7 +214,7 @@ div.related ul {
   background-image: linear-gradient(to bottom, #333333, #222222);
   background-repeat: repeat-x;
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff333333', endColorstr='#ff222222', GradientType=0);
-  border-bottom: 1px solid #111;
+  border-bottom: 1px solid #222;
   -moz-border-radius: 4px;
   -webkit-box-shadow: 0 1px 4px rgba(0, 0, 0, 0.065);
   -moz-box-shadow: 0 1px 4px rgba(0, 0, 0, 0.065);
@@ -499,8 +503,10 @@ tt.descname, tt.descclassname, tt.xref {
 }
 
 hr {
-    border: 1px solid #abc;
-    margin: 2em;
+    border-top: 1px solid #777;
+    border-bottom: none;
+    margin: 2em auto;
+    width: 50%;
 }
 
 
@@ -684,6 +690,9 @@ div.highlight {
         overflow: auto;
         border: none;
     }
+        div.admonition pre {
+            background-color: #333;
+        }
 
 /* But do highlight spans (so search results can be highlighted) */
 span.highlight {
@@ -727,6 +736,7 @@ div.footer {
     clear: both;
     font-size: 0.8em;
     text-align: center;
+    background-color: #222;
 }
 
 p {
