--- a/_themes/casperjs/static/casperjs-dark.css
+++ b/_themes/casperjs/static/casperjs-dark.css
@@ -288,7 +288,6 @@ div.related ul li a tt {
 
 .sphinxsidebar a:active tt span.pre {
     color: #f66;
-
 }
 
 
@@ -312,6 +311,12 @@ div.sphinxsidebar {
 
 div.sphinxsidebar img {
     max-width: 12em;
+}
+
+div.sphinxsidebar input[type="image"] {
+    display: inline;
+    float: none;
+    border: 0;
 }
 
 div.sphinxsidebar h3,
@@ -975,4 +980,12 @@ p {
         margin-left: 0;
     }
 
+}
+
+.donate {
+    text-align: center;
+}
+
+.donate .flattr {
+    margin-top: 1.5em;
 }
