--- a/_themes/casperjs/static/casperjs-light.css
+++ b/_themes/casperjs/static/casperjs-light.css
@@ -876,3 +876,12 @@ p {
 .highlight .vg { color: #bb60d5 } /* Name.Variable.Global */
 .highlight .vi { color: #bb60d5 } /* Name.Variable.Instance */
 .highlight .il { color: #208050 } /* Literal.Number.Integer.Long */
+
+/* https://github.com/n1k0/casperjs-docs/issues/2 */
+#casperjs-documentation img {
+    -webkit-filter: drop-shadow(0 1px 20px rgba(0,0,0,.5));
+    -moz-filter: drop-shadow(0 1px 20px rgba(0,0,0,.5));
+    -ms-filter: drop-shadow(0 1px 20px rgba(0,0,0,.5));
+    -o-filter: drop-shadow(0 1px 20px rgba(0,0,0,.5));
+    filter: drop-shadow(0 1px 20px rgba(0,0,0,.5));
+}
